--- a/README
+++ b/README
@@ -3,3 +3,4 @@ Author: Yoon Lee
 License: Open source code. Absolutely no warranty. 
 You are free to use any of resources however you want.
 Remember, please mention the author name on your source code.
+Please note that if you are other University developer, reference author name on your source code.
