--- a/README
+++ b/README
@@ -2,5 +2,10 @@ UCI iPhone App:
 Author: Yoon Lee
 License: Open source code. Absolutely no warranty. 
 You are free to use any of resources however you want.
-Remember, please mention the author name on your source code.
-Please note that if you are other University developer, reference author name on your source code.
+
+Please note that if you are University developer, reference author name on your source code.
+
+
+Have Questions?
+
+* Shoot me an email: yoonlee0418 at gmail.com
