--- a/README
+++ b/README
@@ -9,3 +9,11 @@ Please note that if you are University developer, reference author name on your 
 Have Questions?
 
 * Shoot me an email: yoonlee0418 at gmail.com
+
+Participated member list:
+
+1) Yoon Lee, 
+2) Justin Shaw,
+3) Otto Chan,
+4) Andrew Beier,
+5) Joanne Yi
